Pull up following revision(s) (requested by christos in ticket #13):

external/bsd/cron/dist/do_command.c: revision 1.14

PR/54433: Hisashi Todd Fujinaka: Empty $MAILTO causes cron to crash